# multi-objects-tracking

./: CMakeLists.txt  README.md
src/: kcftracker.cpp  kcftracker.hpp  main.cpp  tracker.h
